--- a/DotA/HM.html
+++ b/DotA/HM.html
@@ -5,6 +5,11 @@
     <meta charset="utf-8">
   <!--  <link href=bootstrap-3.1.1-dist/css/bootstrap.css rel=stylesheet media="screen">
   -->
+
+    <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
+
+
 </head>
 <style>
 
@@ -23,8 +28,10 @@
 <body>
 
 <form id="filterForm">
+<div class="nav">
+      <div class="container">
     <fieldset>
-    <table>
+    <table class="table table-striped">
         <tr>
             <td>
                 <input type="radio" name="filter" value="normal" checked="checked" />
@@ -65,6 +72,9 @@
         </tr>
     </table>
     </fieldset>
+
+   </div>
+   </div> 
 
 </form>
 <div class="row">
