--- a/DotA/index.html
+++ b/DotA/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
   <!--  <link href=bootstrap-3.1.1-dist/css/bootstrap.css rel=stylesheet media="screen">
   -->
+     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
+
 </head>
 <style>
 
