added match view tab to index

--- a/DotA/index.html
+++ b/DotA/index.html
@@ -15,6 +15,7 @@
         <ul class = "pull-left">
           <li><a href="index_hm.html" target="content">HEAT MAP</a></li>
           <li><a href="zonemap.html" target ="content">ZONE MAP</a></li>
+          <li><a href="match.html" target ="content">MATCH VIEW</a></li>
         </ul>
 
          <ul class="pull-right">
