Not use team colors

--- a/DotA/match.html
+++ b/DotA/match.html
@@ -94,9 +94,7 @@
             .orient("left")
             //.ticks(10);
 
-    var color = d3.scale.ordinal().range([  "#fff5eb","#fee6ce", "#fdd0a2",
-                                            "#fdae6b","#fd8d3c", "#f16913",
-                                            "#d94801", "#a63603", "#7f2704" ]);
+    var color = d3.scale.ordinal().range(['rgb(166,206,227)','rgb(31,120,180)','rgb(178,223,138)','rgb(51,160,44)','rgb(251,154,153)','rgb(227,26,28)','rgb(253,191,111)','rgb(255,127,0)','rgb(202,178,214)','rgb(106,61,154)','rgb(255,255,153)','rgb(177,89,40)']);
 
         // we add the axis
         svg.append("g")
@@ -156,7 +154,7 @@
                     .attr("y", function (d){return yS(d.y)})
                     .attr("width",   filter)
                     .attr("height",  filter)
-                    .style("fill",   function(d){ return d.team == 1 ? '#ff0000' : '#0000ff' })
+                    .style("fill",   function(d){ return color(playerMap[d.player]) })
 
         });
     }
