--- a/DotA/match.html
+++ b/DotA/match.html
@@ -43,16 +43,16 @@
                 <label>Match</label>
             </td>
         </tr>
-        <tr><td><input id="p0" value="0" type="checkbox"></input></td><td><label id="lp0">Player #1</label></td></tr>
-        <tr><td><input id="p1" value="1" type="checkbox"></input></td><td><label id="lp1">Player #2</label></td></tr>
-        <tr><td><input id="p2" value="2" type="checkbox"></input></td><td><label id="lp2">Player #3</label></td></tr>
-        <tr><td><input id="p3" value="3" type="checkbox"></input></td><td><label id="lp3">Player #4</label></td></tr>
-        <tr><td><input id="p4" value="4" type="checkbox"></input></td><td><label id="lp4">Player #5</label></td></tr>
-        <tr><td><input id="p5" value="5" type="checkbox"></input></td><td><label id="lp5">Player #6</label></td></tr>
-        <tr><td><input id="p6" value="6" type="checkbox"></input></td><td><label id="lp6">Player #7</label></td></tr>
-        <tr><td><input id="p7" value="7" type="checkbox"></input></td><td><label id="lp7">Player #8</label></td></tr>
-        <tr><td><input id="p8" value="8" type="checkbox"></input></td><td><label id="lp8">Player #9</label></td></tr>
-        <tr><td><input id="p9" value="9" type="checkbox"></input></td><td><label id="lp9">Player #10</label></td></tr>
+        <tr><td><input id="p0" value="0" type="checkbox" checked="true"></input></td><td><label id="lp0">Player #1</label></td></tr>
+        <tr><td><input id="p1" value="1" type="checkbox" checked="true"></input></td><td><label id="lp1">Player #2</label></td></tr>
+        <tr><td><input id="p2" value="2" type="checkbox" checked="true"></input></td><td><label id="lp2">Player #3</label></td></tr>
+        <tr><td><input id="p3" value="3" type="checkbox" checked="true"></input></td><td><label id="lp3">Player #4</label></td></tr>
+        <tr><td><input id="p4" value="4" type="checkbox" checked="true"></input></td><td><label id="lp4">Player #5</label></td></tr>
+        <tr><td><input id="p5" value="5" type="checkbox" checked="true"></input></td><td><label id="lp5">Player #6</label></td></tr>
+        <tr><td><input id="p6" value="6" type="checkbox" checked="true"></input></td><td><label id="lp6">Player #7</label></td></tr>
+        <tr><td><input id="p7" value="7" type="checkbox" checked="true"></input></td><td><label id="lp7">Player #8</label></td></tr>
+        <tr><td><input id="p8" value="8" type="checkbox" checked="true"></input></td><td><label id="lp8">Player #9</label></td></tr>
+        <tr><td><input id="p9" value="9" type="checkbox" checked="true"></input></td><td><label id="lp9">Player #10</label></td></tr>
     </table>
     </fieldset>
 
@@ -107,72 +107,110 @@
                 .call(yAxis);
 
     var container = svg.append("g"),
-        dataset;
+        dataset;    // Will contain the rects
 
-    var updateMap = function (match, playerFilter) {
-        var playerMap = {},
-            players = 0;
+    // Here we will build a map of player names to unique integer indices, used to filter
+    var playerMap = {},
+        players = 0;
+
+    var prevMatch = 0;  // Stores previous loaded match ID to prevent unneeded reloading of the map.
+
+    // Update the map with a given match ID, but only if the match ID is different than the last call.
+    // Executes a given callback function afterwards, regardless if the map was updated.
+    var updateMap = function (match, cb) {
+        if (prevMatch == match) {
+            if (cb != undefined) {
+                cb();
+            }
+            return;
+        }
+        prevMatch = match;
+
         if (dataset) {
+            // clear old dataset, throwing away all nodes
             dataset.remove();
         }
+        // Clear playermap
+        playerMap = {};
+        players = 0;
+
+        // Label nodes which we will update with the player name
         var playerNodes = document.getElementById('players');
-        d3.csv("data/match_"+match+".csv", function(error, data){
-            //console.log(data);
+        d3.csv("data/match_"+match+".csv", function (error, data){
             data.forEach(function(d) {
-            //     //Sometimes the numbers are returned as strings, these lines transform those strings are transformed into numbers
                 d.t = parseInt(d.t);
                 d.x = parseInt(d.x);
                 d.y = parseInt(d.y);
                 d.team = parseInt(d.team);
+
+                // Check if a player name was encountered before. 
+                // Otherwise we will add it to the map and add the player name to the label.
                 if (playerMap[d.player] == undefined) {
                     document.getElementById('lp' + players).innerText = d.player;
                     playerMap[d.player] = players++;
                 }
              });
 
-            //console.log(data)
-            //console.log(playerMap);
 
             xS.domain(d3.extent(data, function(d){return d.x;})).nice();
-            yS.domain(d3.extent(data, function(d){return d.y;}))   
-
-            var filter = function (d) {
-                if (playerFilter == undefined || playerFilter.length == 0) {
-                    return 6;
-                }
-                if (playerFilter[playerMap[d.player]]) {
-                    return 6;
-                }
-                return 0;
-            };
+            yS.domain(d3.extent(data, function(d){return d.y;}));
 
             dataset = container.selectAll("rect")
                     .data(data)
                     .enter()
                     .append("rect")
+                    .attr("data-player", function (d) {return d.player}) // Also encode player name for filtering purposes
                     .attr("x", function (d){return xS(d.x)})
                     .attr("y", function (d){return yS(d.y)})
-                    .attr("width",   filter)
-                    .attr("height",  filter)
-                    .style("fill",   function(d){ return color(playerMap[d.player]) })
+                    .attr("width",   function (d){return 6;})
+                    .attr("height",  function (d){return 6;})
+                    .style("fill",   function(d){ return color(playerMap[d.player]) });
 
+            if (cb != undefined) {
+                cb();
+            }
         });
+
     }
 
-    updateMap('648283764', []);
-    var form = document.getElementById('filterForm');
-    form.onchange = function () {
-        var players = [];
+    // Filter players given a filter function of type
+    // filter: svgNode -> boolean
+    var updateFilters = function (filter) {
+        var rect = dataset[0];
         var i;
-        var empty = true;
-        for(i = 0; i < 10; i +=1) {
-            var node = document.getElementById('p' + i);
-            players.push(node.checked);
-            if (node.checked) {
-                empty = false;
+        for (i = 0; i < rect.length; i += 1) {
+            if (filter(rect[i])) {
+                rect[i].style.display = 'inline';
+            } else {
+                rect[i].style.display = 'none';
             }
         }
-        updateMap(form.match.value, empty ? undefined : players);
+
+    }
+
+    updateMap('648283764');
+    var form = document.getElementById('filterForm');
+    form.onchange = function () {
+        var playerFilter = []; // Which player index is checked
+        var i;
+        // Update the map with the selected match, and on callback we will filter.
+        updateMap(form.match.value, function () {
+
+            // Now for every checkbox add to the players list if it's checked or not.
+            for(i = 0; i < 10; i +=1) {
+                var node = document.getElementById('p' + i);
+                playerFilter.push(node.checked);
+            }
+
+            // PlayerMap is a function from player name to a unique player-index,
+            // we encoded the player name in the data-player attribute of every node,
+            // playerFilter is a function from player-index to true/false
+            // and the filter should be node -> true/false...
+            // So our filter is forEach node: playerFilter[playerMap[node[data-player]]]
+            updateFilters(function (n) {
+                return playerFilter[playerMap[n.getAttribute('data-player')]];
+            });
+        });
     }
 </script>
 </body>
