--- a/DotA/trace.html
+++ b/DotA/trace.html
@@ -62,7 +62,7 @@
                                             "#fdae6b","#fd8d3c", "#f16913",
                                             "#d94801", "#a63603", "#7f2704" ]);
 
-    d3.csv("trace.csv", function(error, data){
+    d3.csv("data/trace.csv", function(error, data){
         //console.log(data);
         data.forEach(function(d){
         //     //Sometimes the numbers are returned as strings, these lines transform those strings are transformed into numbers
