--- a/DotA/midpoint.html
+++ b/DotA/midpoint.html
@@ -53,8 +53,6 @@ var margin = {top: 20, right: 20, bottom: 30, left: 50},
     width = 960 - margin.left - margin.right,
     height = 500 - margin.top - margin.bottom;
 
-//var parseDate = d3.time.format("%d-%b-%y").parse;
-
 var x = d3.scale.linear()
     .range([0, width]);
 
@@ -77,6 +75,19 @@ var distanceRad = function (x, y){
     return Math.sqrt ((x)*(x) + (y)*(y));
   }
 
+var midPoint = function (PLR, team, t){
+ var sumX = 0;
+ var sumY = 0;
+ var result = {};
+ for (i = 0; i < 5; i++) { 
+      sumX = sumX +  PLR[team][i][t].x;
+      sumY = sumY +  PLR[team][i][t].y;   
+    }
+    result.x = sumX/5;
+    result.y = sumY/5;
+    return result;
+}
+
 var lineRad = d3.svg.line()
     .x(function(d, i) { return x( i ); })
     .y(function(d, i) { return y(distanceRad(d.x,d.y)); });
@@ -84,6 +95,12 @@ var lineRad = d3.svg.line()
 var lineDier = d3.svg.line()
     .x(function(d, i) { return x( i ); })
     .y(function(d, i) { return y(distanceDier(d.x,d.y)); });
+
+var lineMidPoint = d3.svg.line()
+    .x(function(d, i) { return x( i ); })
+    .y(function(d, i) { return y(d);   });
+
+
 
 var svg = d3.select("body").append("svg")
     .attr("width", width + margin.left + margin.right)
@@ -102,7 +119,7 @@ d3.csv("data/match_648283764.csv", function(error, data) {
     d.x =+ d.x;
     d.y =+ d.y;
 
-   if ( plr_map[d.team] == undefined ) {
+    if ( plr_map[d.team] == undefined ) {
       plr_map[d.team] = {};
       players[d.team] = 0;
     }
@@ -120,8 +137,16 @@ d3.csv("data/match_648283764.csv", function(error, data) {
     }
 
       PLR[d.team] [plr_map [d.team][d.player] ] [d.t] = {x : d.x,  y : d.y};
-
   });
+
+
+var MP = [];
+for (i = 0; i < PLR[0][0].length; i++) {
+      
+        console.log(i, PLR[0][0].length) 
+       MP[i] = midPoint(PLR,0,i);
+    }
+
 
 console.log(PLR, plr_map)
 
@@ -150,48 +175,10 @@ console.log(PLR, plr_map)
       .text("Distance");
 
   svg.append("path")
-      .datum(PLR[1][0])
+      .datum(MP)
       .attr("class", "line1")
-      .attr("d", lineRad);
-  svg.append("path")
-      .datum(PLR[1][1])
-      .attr("class", "line2")
-      .attr("d", lineRad);
-  svg.append("path")
-      .datum(PLR[1][2])
-      .attr("class", "line3")
-      .attr("d", lineRad);
-  svg.append("path")
-      .datum(PLR[1][3])
-      .attr("class", "line4")
-      .attr("d", lineRad);
-  svg.append("path")
-      .datum(PLR[1][4])
-      .attr("class", "line5")
-      .attr("d", lineRad);
+      .attr("d", lineMidPoint);
 
-
-
-   svg.append("path")
-      .datum(PLR[0][0])
-      .attr("class", "line1")
-      .attr("d", lineRad);
-  svg.append("path")
-      .datum(PLR[0][1])
-      .attr("class", "line2")
-      .attr("d", lineRad);
-  svg.append("path")
-      .datum(PLR[0][2])
-      .attr("class", "line3")
-      .attr("d", lineRad);
-  svg.append("path")
-      .datum(PLR[0][3])
-      .attr("class", "line4")
-      .attr("d", lineRad);
-  svg.append("path")
-      .datum(PLR[0][4])
-      .attr("class", "line5")
-      .attr("d", lineRad);
 });
 
 //rad  = 1
