--- a/DotA/index.html
+++ b/DotA/index.html
@@ -20,9 +20,10 @@
         </ul>
 
          <ul class="pull-right">
-            <li> <a href="http://d3js.org/">About d3js</a> </li>
-            <li> <a href="http://blog.dota2.com/?l=english">About Dota 2</a> </li>
-              
+            <li> <a href="matlab/HM.html" target="content" >Matlab 1</a> </li>
+            <li> <a href="matlab/HM-perTier.html" target="content">Matlab 2</a> </li>
+            <li> <a href="http://d3js.org/" target="content">About d3js</a> </li>
+            <li> <a href="http://blog.dota2.com/?l=english" target="content">About Dota 2</a> </li>   
          </ul>
       </div>
     </div>
