more on preprocessing

--- a/DotA/index.html
+++ b/DotA/index.html
@@ -20,6 +20,7 @@
         </ul>
 
          <ul class="pull-right">
+            <li> <a href="matlab/extract.html" target="content" >Matlab extract</a> </li>
             <li> <a href="matlab/HM.html" target="content" >Matlab 1</a> </li>
             <li> <a href="matlab/HM-perTier.html" target="content">Matlab 2</a> </li>
             <li> <a href="http://d3js.org/" target="content">About d3js</a> </li>
