added to Filtering section

--- a/DotA/index.html
+++ b/DotA/index.html
@@ -16,7 +16,7 @@
           <li><a href="index_hm.html" target="content">HEAT MAP</a></li>
           <li><a href="zonemap.html" target ="content">ZONE MAP</a></li>
           <li><a href="match.html" target ="content">MATCH VIEW</a></li>
-          <li><a href="animate.html" target ="content">MATCH VIEW (2)</a></li>
+          <li><a href="animate.html" target ="content">MATCH VIEW 2</a></li>
         </ul>
 
          <ul class="pull-right">
