--- a/DotA/match.html
+++ b/DotA/match.html
@@ -28,10 +28,10 @@
 <body>
 
 <form id="filterForm">
-<div class="nav">
-      <div class="container">
+<div>
+      <div >
     <fieldset>
-    <table class="table table-striped">
+    <table>
         <tr>
             <td>
                 <select id = "match">
