--- a/DotA/match.html
+++ b/DotA/match.html
@@ -28,10 +28,10 @@
 <body>
 
 <form id="filterForm">
-<div>
-      <div >
+<div class="nav">
+      <div class="container">
     <fieldset>
-    <table>
+    <table class="table table-striped">
         <tr>
             <td>
                 <select id = "match">
