added players distance

--- a/DotA/index.html
+++ b/DotA/index.html
@@ -17,6 +17,7 @@
           <li><a href="zonemap.html" target ="content">ZONE MAP</a></li>
           <li><a href="match.html" target ="content">MATCH VIEW</a></li>
           <li><a href="animate.html" target ="content">MATCH VIEW 2</a></li>
+          <li><a href="players_distance.html" target ="content">Player's distance (beta) </a></li>
         </ul>
 
          <ul class="pull-right">
